API update: allow testing unselected code
